onclick is not reliable for transformed SVG elements https://bugs.webkit.org/show_bug.cgi?id=34714

Patch by Hans Muller <hmuller@adobe.com> on 2012-02-24
Reviewed by Dirk Schulze.

Source/WebCore:

Use FloatPoints in RenderSVGRoot::nodeAtPoint() when converting the incoming
point to local coordinates.

Test: svg/hittest/svg-small-viewbox.xhtml

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::nodeAtPoint):

LayoutTests:

New svg-small-viewbox test checks that elementFromPoint() works correctly with SVG
elements defined within a 1x1 viewbox.

Revised select-textLength-spacing-squeeze-2.svg to avoid a corner-case,
removed unnecessary -1 adjustment of absEndPos.x from SelectionTestCase.js.

* platform/chromium/test_expectations.txt:
* platform/mac/svg/text/select-textLength-spacing-squeeze-2-expected.png:
* platform/mac/svg/text/select-textLength-spacing-squeeze-2-expected.txt:
* svg/hittest/svg-small-viewbox-expected.txt: Added.
* svg/hittest/svg-small-viewbox.xhtml: Added.
* svg/text/resources/SelectionTestCase.js:
(selectRange):
* svg/text/select-textLength-spacing-squeeze-2.svg:

Canonical link: https://commits.webkit.org/96631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108857 268f45cc-cd09-0410-ab3c-d52691b4dbfc